# sql-file

./: CMakeLists.txt  README.md  index.html
data/: eurjpy.csv  eurusd.csv  plot.txt  sample_v1.conv
scripts/: txt_2_v1.py  txt_2_v2.py
slides/: .gitignore  Makefile  slides.md  template.revealjs
slides/style/: sunblind.css
src/: conv.h  conv_v0.cc  conv_v1.cc  conv_v2.cc  currency_convert.cc  sql_utils.h
src/sql/: embed_schemas.py  schema.0.sql  schema.00.sql  schema.01.sql  schema.1.sql  schema.2.sql
src/sql/migration/: migrate.00.sql  migrate.01.sql
src/sql/rollback/: rollback.01.sql
test/: test.sh
